# CV_HOMEWORK

./: .gitignore  config.py  config.yaml  data_loader.py  evaluation.py  hyperparam_config.yaml  plot_hyperparam_results.py  pyproject.toml  run_hyperparam_exp.py  run_training.py  sign_language_mnist.ipynb  trainer.py
log/: classification_report.json  evaluation_results.json  results.json
log/hyperparam/: summary.json  summary.md
log/hyperparam/activation/activation_ELU/: result.json
log/hyperparam/activation/activation_GELU/: result.json
log/hyperparam/activation/activation_ReLU/: result.json
log/hyperparam/batch_size/batch_size_128/: result.json
log/hyperparam/batch_size/batch_size_16/: result.json
log/hyperparam/batch_size/batch_size_256/: result.json
log/hyperparam/batch_size/batch_size_32/: result.json
log/hyperparam/batch_size/batch_size_64/: result.json
log/hyperparam/epochs/epochs_10/: result.json
log/hyperparam/epochs/epochs_20/: result.json
log/hyperparam/epochs/epochs_30/: result.json
log/hyperparam/epochs/epochs_5/: result.json
log/hyperparam/learning_rate/learning_rate_0.0001/: result.json
log/hyperparam/learning_rate/learning_rate_0.0005/: result.json
log/hyperparam/learning_rate/learning_rate_0.001/: result.json
log/hyperparam/learning_rate/learning_rate_0.005/: result.json
log/hyperparam/learning_rate/learning_rate_0.01/: result.json
log/hyperparam/optimizer/optimizer_Adam/: result.json
log/hyperparam/optimizer/optimizer_RMSprop/: result.json
models/: __init__.py  alexnet.py  my_dnn.py  resnet.py  vgg.py
(+1 files in other folders)
